<resources>
    <string name="app_name">GameBuddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Sign up</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_error">Error</string>
    <string name="text_info">Info</string>
    <string name="are_you_sure">Are you sure_</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">Yes</string>
    <string name="verify_info">Code has been sent to your email</string>
    <string name="verify_button">Verify</string>
    <string name="go_to_previous_page">GO to previous page</string>
    <string name="login_header">Login to your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create a new Account</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register_remember">Remember me</string>
    <string name="menu_home">Home</string>
    <string name="menu_community">Community</string>
    <string name="menu_message">Message</string>
    <string name="menu_profile">Profile</string>
    <string name="popular">Popular</string>
    <string name="see_all">See all</string>
    <string name="home_header">Let\'s play game together!</string>
    <string name="categories">Categories</string>
    <string name="matching">Matching</string>
    <string name="home_matching_desc">Find out if the game you are thinking of playing is popular among other gamers</string>
    <string name="home_matching_btn">Start matching</string>
    <string name="pending_requests">Pending requests</string>
    <string name="accept_request">accept_request</string>
    <string name="decline_request">decline_request</string>
    <string name="search">Search</string>
    <string name="search_bar_view">Search Bar View</string>
    <string name="friends">Friends</string>
    <string name="chat">Chat</string>
    <string name="most_communicated">Most Communicated</string>
    <string name="matched_user_profile_photo">Matched User Profile Photo</string>
    <string name="favorite_games">Favorite Games</string>
    <string name="character">Character</string>
    <string name="location_icon">Location icon</string>
    <string name="icon_to_turning_previous_page_which_is_chatbox_screen">Icon to turning previous page which is ChatBox screen</string>
    <string name="message">Message</string>
    <string name="match">Match</string>
    <string name="decline">Decline</string>
    <string name="press_match_button_to_start_matching_or_decline_button_to_skip">Press Match button to start matching or Decline button to skip</string>
    <string name="click_match_to_start_matching_or_click_decline_to_skip_next_match">Click Match to start matching or click Decline to skip next match</string>
    <string name="username">username</string>
    <string name="communities">Communities :</string>
    <string name="gender">Gender :</string>
    <string name="age">Age :</string>
    <string name="e_mail">E-Mail :</string>
    <string name="test_test_com">test@test.com</string>
    <string name="_19">19</string>
    <string name="post_of_community">Post of community</string>
    <string name="share_the_post">Share the post</string>
    <string name="comment_for_the_post">Comment for the post</string>
    <string name="like_the_post">Like the post</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="comments">Comments</string>
    <string name="gamebuddy">GameBuddy</string>
    <string name="pending_friend_requests">Pending friend requests</string>
    <string name="popular_games">Popular games</string>
    <string name="join_community">Join Community</string>
    <string name="create_a_community">Create a community</string>
    <string name="explore_communities">Explore communities</string>
    <string name="community_background_image">Community background image</string>
    <string name="member">Member</string>
    <string name="post">Post</string>
    <string name="games">Games</string>
    <string name="select_your_min_3_favorite_games">Select your min 3 favorite games</string>
    <string name="keywords">Keywords</string>
    <string name="select_a_minimum_of_your_three_favorite_games">Select a minimum of your three favorite games.</string>
    <string name="select_a_minimum_of_your_3_favorite_games">Select a minimum of your 3 favorite games</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="achievements">Achievements</string>
</resources>