<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|bottom"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_match_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/text"
        android:text="@string/click_match_to_start_matching_or_click_decline_to_skip_next_match"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/decline" />

        <Button
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/match" />

    </LinearLayout>

</LinearLayout>